--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.13.4",
+    "@tanstack/react-query-devtools": "^5.13.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
@@ -22,6 +29,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0",
+    "styled-components": "^6.1.1",
     "vite": "^5.0.0"
   }
 }
